--- a/Site HTML/about.html
+++ b/Site HTML/about.html
@@ -54,18 +54,29 @@
           </ul>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
       </ul>
     </div>
   </div>
 </nav></div>
+<br>
+<br>
+<div class="card text-center">
+  <div class="card-header">
+  Sobre o Projeto
+  </div>
+  <div class="card-body">
+    <p class="card-text">Este projeto (“Evolução dos processadores”) foi realizado na disciplina de Introdução à Engenharia Informática, no curso de Engenharia de Computadores e Informática, na Universidade de Aveiro, tendo sido criado no dia 3 de janeiro de 2023. Cada um dos autores (“António Caetano e Leonardo Luís) teve uma contribuição de 50% neste projeto final, trabalhando juntamente tanto na elaboração do Índice, como no resumo dos diferentes conceitos em cada capítulo, a indexação de imagens e o posterior código sintetizado para cada uma das partes de forma a elaborar todo este site. </p>
+    <a href="https://github.com/detiuaveiro/infor2022-ap-g-infor2022-ap-g46" class="btn btn-primary">Go to repository</a>
+  </div>
+</div>
     
 
 
 
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark bottom">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-bottom">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Introdução à Engenharia Informática 2022/2023</a>
+      <a class="navbar-brand"s>Introdução à Engenharia Informática 2022/2023</a>
     </div>
   </nav>
 </body>
