--- a/Site HTML/capitulo4.html
+++ b/Site HTML/capitulo4.html
@@ -54,7 +54,7 @@
           </ul>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
       </ul>
     </div>
   </div>
@@ -76,7 +76,7 @@
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark bottom">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Introdução à Engenharia Informática 2022/2023</a>
+      <a class="navbar-brand" >Introdução à Engenharia Informática 2022/2023</a>
     </div>
   </nav>
 </body>
