--- a/Site HTML/index.html
+++ b/Site HTML/index.html
@@ -53,7 +53,7 @@
           </ul>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
       </ul>
     </div>
   </div>
@@ -70,7 +70,6 @@
        
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <a href="energias.html">
             <img src="primeiropc.jpg" alt="Primeiro Computador" class="d-block" style="height:600px; width:100% ;">
             </a>
             <div class="carousel-caption">
@@ -78,7 +77,6 @@
             </div>
           </div>
           <div class="carousel-item">
-            <a href="energias.html">
             <img src="proccessador.jpg" alt="Processador" class="d-block" style="height:600px; width:100% ;">
           </a>
             <div class="carousel-caption">
@@ -86,7 +84,6 @@
             </div> 
           </div>
           <div class="carousel-item">
-            <a href="energias.html">
               <img src="transitor.jpg" alt="Transitor" class="d-block" style="height:600px; width:100% ;">
             </a>
             <div class="carousel-caption">
@@ -94,7 +91,6 @@
             </div>  
           </div>
           <div class="carousel-item">
-            <a href="energias.html">
               <img src="riscvs.jpg" alt="Comparação" class="d-block" style="height:600px; width:100% ;">
             </a>
             <div class="carousel-caption">
@@ -103,7 +99,6 @@
             </div> 
           </div>
           <div class="carousel-item">
-            <a href="energias.html">
               <img src="processadoresfamilia.jpg" alt="Comparação" class="d-block" style="height:600px; width:100% ;">
             </a>
             <div class="carousel-caption">
