--- a/Site HTML/capitulo3.html
+++ b/Site HTML/capitulo3.html
@@ -25,6 +25,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body style="background-color:whitesmoke">
@@ -54,18 +55,33 @@
           </ul>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="about.html">About</a>
       </ul>
     </div>
   </div>
 </nav></div>
-    <h2>Evolução da CPU</h2>
-
+<br>    
+<h2 style="text-align: center;">Evolução da CPU</h2>
+<br>
+    <div class="container">
+      <div class="row">
+          <div class="column2">
+            <img src="primeiropc.jpg" alt="ris" style="width:100%;height: 500px;" >
+          </div>
+          <div class="column2">
+              <img src="i9.jpg" alt="" style="width:100%;height: 500px;" >
+          </div>
+        </div></div>
+        <div class="card">
+          <div class="card-body">
+            Ao longo dos tempos, os processadores foram evoluindo progressivamente, criando um avanço enorme na tecnologia existente. Existem várias referências a um processador nos tempos antigos, no entanto, este só começou a ser popular em 1971, quando Frederico Faggin criou o primeiro microprocessador denominado Intel 4004. Nos dias de hoje, os processadores mais utilizados pelos consumidores são os da gama Intel Core e os AMD Ryzen. As características desta linha de CPUs. 
+            Atualmente, o poder e a velocidade de um processador podem ser medidos pela velocidade de clock. De um modo geral, velocidades mais rápidas do clock do processador aumentará diretamente a rapidez das tarefas num computador, tornando melhor a experiência do utilizador e reduzindo assim o tempo de espera para interagir, como por exemplo, com aplicações de um sistema operativo.          </div>
+        </div>
 
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark bottom">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Introdução à Engenharia Informática 2022/2023</a>
+      <a class="navbar-brand">Introdução à Engenharia Informática 2022/2023</a>
     </div>
   </nav>
 </body>
